--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ header nav .nav-links li {
   align-items: center;
   justify-content: center;
   height: 100%;
-  padding: 0 20px;
+  padding: 0 24px;
 }
 header nav .nav-links li a {
   font-weight: 500;
@@ -611,10 +611,14 @@ main .auth_section {
 }
 main .auth_section .auth_form .title {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
   margin-bottom: 36px;
+}
+@media screen and (max-width: 768px) {
+  main .auth_section .auth_form .title {
+    align-items: center;
+    justify-content: center;
+  }
 }
 main .auth_section .auth_form .title h4 {
   font-size: 32px;
@@ -623,11 +627,20 @@ main .auth_section .auth_form .title h4 {
 }
 main .auth_section .auth_form .title p {
   color: #666b88;
-  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  main .auth_section .auth_form .title p {
+    text-align: center;
+  }
 }
 main .auth_section .auth_form .title p span {
   color: #009640;
   font-weight: 500;
+}
+main .auth_section .auth_form .title.force_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 main .auth_section .auth_form .nav {
   border-bottom: 2px solid #e9e9e9;
@@ -709,11 +722,11 @@ main .auth_section .auth_form .otp-container {
   justify-content: space-between;
   padding: 0 0 24px;
   width: 100%;
-  gap: 8px;
+  gap: 12px;
 }
 main .auth_section .auth_form .otp-container .otp-input {
   width: 100%;
-  height: 70px;
+  height: 80px;
   flex: 1;
   border-radius: 4px;
   text-align: center;
@@ -806,6 +819,7 @@ main .auth_section .auth_form .select_type .content img {
 main .auth_section .auth_form .plans {
   margin-bottom: 24px;
   display: flex;
+  justify-content: center;
   gap: 16px;
 }
 main .auth_section .auth_form .plans::-webkit-scrollbar {
@@ -818,7 +832,7 @@ main .auth_section .auth_form .plans::-webkit-scrollbar {
 }
 main .auth_section .auth_form .plans .plan {
   min-width: 300px;
-  padding: 16px 12px;
+  padding: 16px;
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.05) 0 1em 2em;
 }
@@ -840,20 +854,30 @@ main .auth_section .auth_form .plans .plan .img h5 {
 }
 main .auth_section .auth_form .plans .plan ul {
   padding: 16px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   border-bottom: 1px solid #e9e9e9;
 }
 main .auth_section .auth_form .plans .plan ul li {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  align-items: baseline;
 }
 main .auth_section .auth_form .plans .plan ul li .benefit {
   display: flex;
-  align-items: center;
-  gap: 4px;
+  align-items: baseline;
+  gap: 6px;
+  max-width: 245px;
   line-height: 24px;
+  font-size: 14px;
   color: #1d1d1b;
   font-weight: 500;
+}
+main .auth_section .auth_form .plans .plan ul li .benefit i {
+  font-size: 14px;
+  color: #009640;
 }
 main .auth_section .auth_form .plans .plan ul li span {
   color: #1d1d1b;
@@ -904,8 +928,17 @@ main .auth_section .auth_form .plans .plan .price button {
   color: #ffffff;
   height: 48px;
 }
+main .auth_section .img {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+main .auth_section .img img {
+  max-width: 90%;
+}
 main .explore {
-  padding: 60px 0;
+  padding: 40px 0;
 }
 main .explore .asideFilter {
   width: 100%;
@@ -1321,6 +1354,7 @@ main .about_us .banner-imgs-about {
 }
 main .about_us .banner-imgs-about img {
   max-width: 100%;
+  max-height: 480px;
   animation: hero-thumb-sm-2-animation 4s linear infinite alternate;
   border-top-right-radius: 100px;
   border-bottom-left-radius: 100px;
@@ -1685,21 +1719,45 @@ main .latest_cvs .profile_card .owner .label h6 {
 }
 main .latest_cvs .profile_card .buttons {
   position: absolute;
-  top: 8px;
+  top: 12px;
   right: 8px;
   display: flex;
   align-items: center;
 }
-main .latest_cvs .profile_card .buttons button {
+main .latest_cvs .profile_card .buttons button,
+main .latest_cvs .profile_card .buttons a {
   width: 25px;
   height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   background: none;
   outline: none;
 }
-main .latest_cvs .profile_card .buttons button img {
+main .latest_cvs .profile_card .buttons button img,
+main .latest_cvs .profile_card .buttons a img {
   height: 16px;
-  width: 16px;
+}
+main .banner_section {
+  padding: 60px 0;
+  background-image: linear-gradient(rgba(0, 150, 64, 0.2), #fff);
+  background-size: cover;
+  background-position: center;
+}
+main .banner_section .content {
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+}
+main .banner_section .content h3 {
+  font-size: 32px;
+  margin: 0;
+}
+main .banner_section .content p {
+  color: #777777;
+  font-size: 16px;
+  margin: 0;
 }
 main .contact {
   padding: 60px 0;
@@ -1725,7 +1783,13 @@ main .contact form .form {
 main .contact h4 {
   font-size: 40px;
   color: #009640;
+  margin: 0;
   font-weight: 600;
+}
+main .contact p {
+  font-size: 16px;
+  color: #666b88;
+  margin-bottom: 24px;
 }
 main .contact .animatedMap {
   width: 100%;
@@ -2111,11 +2175,6 @@ input[type=radio]:checked::after {
 .create_resume .wrapper .content .avatar {
   height: 100%;
   width: 140px;
-}
-.create_resume .wrapper .content .avatar img {
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 .create_resume .wrapper .thumb {
   position: absolute;
@@ -2813,6 +2872,35 @@ footer .copy_rights .social_media ul a:hover svg path {
 .profile_menu .profile_wrapper ul li span {
   width: 36px !important;
   height: 36px !important;
+}
+
+.modal-body {
+  padding: 24px !important;
+}
+.modal-body .buttons {
+  margin-top: 12px;
+  display: flex;
+  gap: 16px;
+}
+.modal-body .buttons .delete_btn {
+  padding: 8px;
+  border: none;
+  background: none;
+  outline: none;
+  color: #ffffff;
+  border-radius: 8px;
+  width: 100%;
+  background: red;
+}
+.modal-body .buttons .cancel_btn {
+  padding: 8px;
+  border: none;
+  background: none;
+  outline: none;
+  color: #1d1d1b;
+  border-radius: 8px;
+  width: 100%;
+  border: 1px solid #1d1d1b;
 }
 
 @keyframes hero-thumb-sm-2-animation {
