--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -589,6 +589,154 @@ main {
       }
     }
   }
+  .home_section {
+    padding: 60px 0 30px;
+    @media screen and (max-width: 576px) {
+      padding: 60px 0 0;
+    }
+    .filter {
+      width: 100%;
+      padding-bottom: 4px;
+      overflow-x: scroll;
+      &::-webkit-scrollbar {
+        height: 2px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: $inputStroke;
+        border-radius: 12px;
+      }
+      ul {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        li .content {
+          padding: 8px 12px;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          transition: $transition;
+          gap: 8px;
+          border-radius: 12px;
+          flex-direction: column;
+          h6 {
+            margin: 0;
+            white-space: nowrap;
+            transition: $transition;
+          }
+          .img img {
+            height: 32px;
+          }
+          &.active,
+          &:hover {
+            h6 {
+              color: $main;
+            }
+            background: $main5;
+          }
+        }
+      }
+    }
+    .profile_card {
+      border: 1px solid $inputStroke;
+      padding: 4px;
+      gap: 8px;
+      border-radius: 100px 0 0 100px;
+      display: flex;
+      position: relative;
+      align-items: center;
+      .img {
+        width: 90px;
+        height: 90px;
+        overflow: hidden;
+        border-radius: 50%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .owner {
+        h6 {
+          color: $dark;
+          font-size: 16px;
+          font-weight: 500;
+          margin-bottom: 0;
+        }
+        .title_age {
+          display: flex;
+          gap: 12px;
+          align-items: center;
+          color: $text;
+          font-size: 12px;
+          font-weight: 400;
+        }
+        .label {
+          height: 32px;
+          background: $main5;
+          padding: 4px 8px;
+          gap: 4px;
+          border-radius: 8px;
+          display: flex;
+          align-items: center;
+          img {
+            height: 26px;
+          }
+          h6 {
+            color: $main;
+            margin: 0;
+            font-size: 12px;
+          }
+        }
+      }
+      .buttons {
+        position: absolute;
+        top: 12px;
+        right: 8px;
+        display: flex;
+        align-items: center;
+        button,
+        a {
+          width: 25px;
+          height: 25px;
+          @include centerFlex();
+          img {
+            height: 16px;
+          }
+          @include clearInput();
+        }
+      }
+    }
+    .swiper.heroSection {
+      border-radius: 12px;
+      .img {
+        width: 100%;
+        border-radius: 12px;
+        position: relative;
+        overflow: hidden;
+        aspect-ratio: 3 / 2;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        .content {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          @include centerFlex();
+          padding: 24px;
+          background: #00000080;
+          h6 {
+            color: $white;
+            font-size: 24px;
+            margin: 0;
+          }
+        }
+      }
+    }
+  }
   .auth_section {
     padding: 60px 4px;
     .auth_form {
@@ -2281,6 +2429,7 @@ input[type="number"]::-webkit-inner-spin-button {
       gap: 12px;
     }
     .img {
+      width: fit-content;
       @include centerFlex();
       img {
         height: 64px;
