--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -590,13 +590,10 @@ main {
     }
   }
   .home_section {
-    padding: 60px 0 30px;
-    @media screen and (max-width: 576px) {
-      padding: 60px 0 0;
-    }
+    padding: 30px 0;
     .filter {
       width: 100%;
-      padding-bottom: 4px;
+      padding-bottom: 8px;
       overflow-x: scroll;
       &::-webkit-scrollbar {
         height: 2px;
@@ -632,6 +629,50 @@ main {
               color: $main;
             }
             background: $main5;
+          }
+        }
+        select {
+          min-width: 120px;
+        }
+      }
+      .select_type {
+        height: 100%;
+        cursor: pointer;
+        input {
+          display: none;
+          &:checked + .content {
+            background: $main5;
+            border: 1px solid $main;
+            img {
+              filter: brightness(1) invert(0);
+            }
+          }
+        }
+        .content {
+          border: 1px solid $inputBg;
+          transition: $transition;
+          @include centerFlex();
+          flex-direction: column;
+          background: $inputBg;
+          height: 54px;
+          padding: 0 24px;
+          border-radius: 12px;
+          h6 {
+            margin: 0;
+            white-space: nowrap;
+            color: $dark;
+            font-size: 14px;
+            font-weight: 500;
+          }
+          p {
+            font-size: 14px;
+            color: $text;
+            line-height: 24px;
+          }
+          img {
+            transition: $transition;
+            margin-bottom: 16px;
+            filter: brightness(0) invert(0);
           }
         }
       }
@@ -713,7 +754,7 @@ main {
         border-radius: 12px;
         position: relative;
         overflow: hidden;
-        aspect-ratio: 3 / 2;
+        height: 100%;
         img {
           width: 100%;
           height: 100%;
@@ -736,6 +777,15 @@ main {
         }
       }
     }
+  }
+  .viewMore {
+    padding: 4px 16px;
+    background: $main;
+    color: $white;
+    border-radius: 100px;
+    display: inline-block;
+    font-size: 14px;
+    margin-top: 12px;
   }
   .auth_section {
     padding: 60px 4px;
@@ -2550,7 +2600,7 @@ input[type="number"]::-webkit-inner-spin-button {
     height: 54px !important;
     border-radius: 12px !important;
     border: 1px solid $inputStroke !important;
-    padding: 0 16px !important;
+    padding: 0 24px !important;
     font-size: 14px !important;
     margin: 0 !important;
   }
