--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -696,6 +696,11 @@ main .home_section .filter .select_type .content img {
   margin-bottom: 16px;
   filter: brightness(0) invert(0);
 }
+main .home_section .filter.bg_light {
+  background: #f8f8f8;
+  border-radius: 12px;
+  padding: 8px;
+}
 main .home_section .profile_card {
   border: 1px solid #e9e9e9;
   padding: 4px;
@@ -779,6 +784,7 @@ main .home_section .swiper.heroSection .img {
   position: relative;
   overflow: hidden;
   height: 100%;
+  aspect-ratio: 6/1;
 }
 main .home_section .swiper.heroSection .img img {
   width: 100%;
@@ -3141,5 +3147,10 @@ footer .copy_rights .social_media ul a:hover svg path {
   }
   100% {
     transform: translateY(0px);
+  }
+}
+@media screen and (max-width: 576px) {
+  .hide-sm {
+    display: none !important;
   }
 }/*# sourceMappingURL=style.css.map */
