--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -676,6 +676,11 @@ main {
           }
         }
       }
+      &.bg_light{
+        background: $inputBg;
+        border-radius: 12px;
+        padding: 8px;
+      }
     }
     .profile_card {
       border: 1px solid $inputStroke;
@@ -755,6 +760,7 @@ main {
         position: relative;
         overflow: hidden;
         height: 100%;
+        aspect-ratio: 6 / 1;
         img {
           width: 100%;
           height: 100%;
@@ -3017,5 +3023,10 @@ footer {
   }
   100% {
     transform: translateY(0px);
+  }
+}
+.hide-sm {
+  @media screen and (max-width: 576px) {
+    display: none !important;
   }
 }
