--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,8 @@ p {
 }
 
 button,
-a {
+a,
+select {
   color: #000;
 }
 
@@ -3153,4 +3154,20 @@ footer .copy_rights .social_media ul a:hover svg path {
   .hide-sm {
     display: none !important;
   }
+}
+
+.applyNow {
+  width: min(100%, 450px);
+  height: 54px;
+  margin: 0 auto;
+  border-radius: 8px;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #009640;
+  color: #ffffff;
+}
+.applyNow:hover {
+  color: #ffffff;
 }/*# sourceMappingURL=style.css.map */
