--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -387,6 +387,11 @@ header {
             }
           }
         }
+        .lang {
+          span {
+            font-weight: bold;
+          }
+        }
         &.toggler {
           display: none;
           @media screen and (max-width: 992px) {
