--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,15 +133,15 @@ select {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5019607843), rgba(0, 0, 0, 0.5019607843));
+  height: calc(100vh - 80px);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.231372549), rgba(0, 0, 0, 0.1176470588));
   z-index: -1;
   opacity: 0;
   transition: none;
 }
 .layer.show {
   opacity: 1;
-  z-index: 9999999;
+  z-index: 9;
 }
 
 .search-container {
