--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -151,14 +151,14 @@ $shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(#00000080, #00000080);
+  height: calc(100vh - 80px);
+  background-image: linear-gradient(#0000003b, #0000001e);
   z-index: -1;
   opacity: 0;
   transition: none;
   &.show {
     opacity: 1;
-    z-index: 9999999;
+    z-index: 9;
   }
 }
 .search-container {
