--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999999999;
 }
 .preloader .preloaderImg {
   width: 100px;
@@ -142,6 +143,87 @@ select {
 .layer.show {
   opacity: 1;
   z-index: 9;
+}
+
+.promoteModal {
+  width: 100%;
+  height: 100vh;
+  padding: 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(29, 29, 27, 0.4);
+  overflow-y: auto;
+  z-index: 999999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+}
+.promoteModal.show {
+  display: flex;
+}
+.promoteModal::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.promoteModal .modalBody {
+  max-width: 500px;
+  aspect-ratio: 1/1;
+  padding: 8px 16px;
+  background-color: #fefefe;
+  border-radius: 12px;
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.1019607843);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 30px;
+}
+.promoteModal .modalBody .modalHeader {
+  width: 100%;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+.promoteModal .modalBody .modalHeader h3 {
+  width: unset;
+  flex: 1 0 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
+}
+.promoteModal .modalBody .modalHeader .closeBtn {
+  width: 30px;
+  height: 30px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2px;
+  background-color: #1d1d1b;
+  color: #ffffff;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 16px;
+}
+.promoteModal .modalBody .modalImgBox {
+  width: 100%;
+  flex: 1 0 0;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 20px;
+  margin-bottom: 8px !important;
+}
+.promoteModal .modalBody .modalImgBox img {
+  padding: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 
 .search-container {
@@ -371,6 +453,21 @@ header nav .util li .notification_dropDown ul li {
   background: none;
   border-radius: none;
   height: auto;
+}
+header nav .util li .notification_dropDown ul li.promoteNotification {
+  width: 100%;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+header nav .util li .notification_dropDown ul li.promoteNotification a {
+  width: 100%;
+  display: flex;
+}
+header nav .util li .notification_dropDown ul li.promoteNotification a img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 header nav .util li .notification_dropDown ul li .img img {
   height: 48px;
@@ -632,6 +729,9 @@ main .home_section .filter ul {
   display: flex;
   align-items: center;
   gap: 12px;
+}
+main .home_section .filter ul li {
+  flex: 1 0 0;
 }
 main .home_section .filter ul li .content {
   padding: 8px 12px;
