--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,6 +96,7 @@ $shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999999999;
   .preloaderImg {
     width: 100px;
     height: 100px;
@@ -159,6 +160,93 @@ $shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   &.show {
     opacity: 1;
     z-index: 9;
+  }
+}
+.promoteModal {
+  width: 100%;
+  height: 100vh;
+  padding: 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(29, 29, 27, 0.4);
+  overflow-y: auto;
+  z-index: 999999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+
+  &.show {
+    display: flex;
+  }
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  .modalBody {
+    max-width: 500px;
+    aspect-ratio: 1 / 1;
+    padding: 8px 16px;
+    background-color: #fefefe;
+    border-radius: 12px;
+    box-shadow: 0px 4px 16px 0px #0000001a;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: 30px;
+
+    .modalHeader {
+      width: 100%;
+      padding: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 16px;
+
+      h3 {
+        width: unset;
+        flex: 1 0 0;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin: 0;
+      }
+
+      .closeBtn {
+        width: 30px;
+        height: 30px;
+        border-radius: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2px;
+        background-color: $dark;
+        color: $white;
+        font-weight: bold;
+        cursor: pointer;
+        font-size: 16px;
+      }
+    }
+
+    .modalImgBox {
+      width: 100%;
+      flex: 1 0 0;
+      display: flex;
+      position: relative;
+      overflow: hidden;
+      box-shadow: $shadow;
+      border-radius: 20px;
+      margin-bottom: 8px !important;
+
+      img {
+        padding: 0;
+        object-fit: cover;
+        width: 100%;
+      }
+    }
   }
 }
 .search-container {
@@ -364,6 +452,23 @@ header {
               background: none;
               border-radius: none;
               height: auto;
+
+              &.promoteNotification {
+                width: 100%;
+                border-radius: 12px;
+                overflow: hidden;
+                box-shadow: $shadow;
+                a {
+                  width: 100%;
+                  display: flex;
+
+                  img {
+                    width: 100%;
+                    object-fit: cover;
+                  }
+                }
+              }
+
               .img img {
                 height: 48px;
                 object-fit: contain;
@@ -615,6 +720,9 @@ main {
         display: flex;
         align-items: center;
         gap: 12px;
+        li {
+          flex: 1 0 0;
+        }
         li .content {
           padding: 8px 12px;
           display: flex;
