--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ select {
   z-index: 2;
   background-color: #009640;
   transform: translateY(100%);
-  animation: slide-up 2.5s forwards;
+  animation: slide-up 0.5s forwards;
 }
 @media screen and (max-width: 1024px) {
   .preloader .preloaderImg::after {
@@ -148,57 +148,43 @@ select {
 .promoteModal {
   width: 100%;
   height: 100vh;
-  padding: 16px;
   position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(29, 29, 27, 0.4);
   overflow-y: auto;
   z-index: 999999;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   transition: 0.3s;
+  opacity: 0;
+  visibility: hidden;
 }
 .promoteModal.show {
-  display: flex;
+  opacity: 1;
+  visibility: visible;
 }
 .promoteModal::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
 .promoteModal .modalBody {
-  max-width: 500px;
-  aspect-ratio: 1/1;
-  padding: 8px 16px;
-  background-color: #fefefe;
+  width: min(100% - 24px, 500px);
   border-radius: 12px;
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.1019607843);
   display: flex;
   flex-direction: column;
   position: relative;
-  gap: 30px;
+  padding: 0;
 }
-.promoteModal .modalBody .modalHeader {
-  width: 100%;
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 16px;
-}
-.promoteModal .modalBody .modalHeader h3 {
-  width: unset;
-  flex: 1 0 0;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin: 0;
-}
-.promoteModal .modalBody .modalHeader .closeBtn {
+.promoteModal .modalBody .closeBtn {
   width: 30px;
   height: 30px;
   border-radius: 12px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -208,22 +194,23 @@ select {
   font-weight: bold;
   cursor: pointer;
   font-size: 16px;
+  z-index: 999;
 }
 .promoteModal .modalBody .modalImgBox {
   width: 100%;
-  flex: 1 0 0;
+  aspect-ratio: 3/2;
   display: flex;
   position: relative;
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 20px;
-  margin-bottom: 8px !important;
 }
 .promoteModal .modalBody .modalImgBox img {
-  padding: 0;
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
+  height: 100%;
+  padding: 0;
 }
 
 .search-container {
@@ -409,7 +396,7 @@ header nav .util li .count {
   font-size: 10px;
 }
 header nav .util li .notification_dropDown {
-  width: 250px;
+  width: 300px;
   height: 0;
   overflow: hidden;
   transition: all 0.4s ease-in-out;
@@ -466,6 +453,7 @@ header nav .util li .notification_dropDown ul li.promoteNotification a {
 }
 header nav .util li .notification_dropDown ul li.promoteNotification a img {
   width: 100%;
+  aspect-ratio: 3/2;
   -o-object-fit: cover;
      object-fit: cover;
 }
