--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2719,6 +2719,7 @@ input[type=number]::-webkit-inner-spin-button {
 .image_change .image_upload {
   width: 148px;
   height: 148px;
+  padding: 8px;
   position: relative;
   border-radius: 50%;
   border: 1.5px solid #e9e9e9;
@@ -2759,6 +2760,18 @@ input[type=number]::-webkit-inner-spin-button {
 .image_change .image_upload label i {
   font-size: 16px;
   color: #ffffff;
+}
+
+.addPromomte .image_change .image_upload {
+  width: 168px;
+  border-radius: 12px;
+}
+.addPromomte .image_change .image_upload img {
+  width: 148px;
+  height: 100%;
+  border-radius: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .input_field {
