--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2642,6 +2642,7 @@ input[type="number"]::-webkit-inner-spin-button {
   .image_upload {
     width: 148px;
     height: 148px;
+    padding: 8px;
     position: relative;
     border-radius: 50%;
     border: 1.5px solid $inputStroke;
@@ -2678,6 +2679,20 @@ input[type="number"]::-webkit-inner-spin-button {
       bottom: 12px;
     }
   }
+}
+.addPromomte {
+  .image_change {
+    .image_upload {
+      width: 168px;
+      border-radius: 12px;
+      img {
+        width: 148px;
+        height: 100%;
+        border-radius: 0;
+        object-fit: cover;
+      }
+    }
+  } 
 }
 .input_field {
   display: flex;
